fixed color contrast errors

--- a/styles/form.css
+++ b/styles/form.css
@@ -47,7 +47,7 @@ h1{
 
 label {
     display: block;
-    color: #9c2d13;
+    color: #000000;
     font-size: 1rem;
 }
 
